--- a/docs/.vuepress/public/css/variables.css
+++ b/docs/.vuepress/public/css/variables.css
@@ -24,3 +24,16 @@
     --docs-note-bg: var(--docs-pre-bg) !important;
   }
 }
+
+.supporters a {
+  display: inline-block;
+  margin: 1.5rem 1.5rem 1.5rem 0;
+  text-align: center;
+}
+
+.supporters img {
+  display: block;
+  width: 75px;
+  height: 75px;
+  margin-bottom: .5rem;
+}
